# advent-of-code-2022-cpp

./: CMakeLists.txt  CMakePresets.json  README.md
advent-of-code/: CMakeLists.txt
advent-of-code-2022/: CMakeLists.txt  aoc2022.cpp  aoc2022.h  util.cpp  util.h
advent-of-code-2022/day00/: day00.cpp  day00.h
advent-of-code-2022/day01/: day01.cpp
advent-of-code/common/include/: util.h
advent-of-code/day00/: day00.cpp  day00.h
advent-of-code/y2022/: aoc2022.cpp
advent-of-code/y2022/day01/: day01.cpp
advent-of-code/y2022/day02/: day02.cpp  day02.h
